src/parser.output
Grammar

    0 $accept: ROOT $end

    1 ROOT: PROGRAM

    2 PROGRAM: VARIABLE_DECLARATION
    3        | FUNCTION_DECLARATION
    4        | FORWARD_DECLARATION
    5        | PROGRAM VARIABLE_DECLARATION
    6        | PROGRAM FUNCTION_DECLARATION
    7        | PROGRAM FORWARD_DECLARATION

    8 VARIABLE_DECLARATION: DECLARATION_SPECIFIERS SEMICOLON
    9                     | DECLARATION_SPECIFIERS INIT_DECLARATION_LIST SEMICOLON

   10 DECLARATION_SPECIFIERS: TYPE
   11                       | QUALIFIER
   12                       | STORAGE_CLASS
   13                       | TYPE DECLARATION_SPECIFIERS
   14                       | QUALIFIER DECLARATION_SPECIFIERS
   15                       | STORAGE_CLASS DECLARATION_SPECIFIERS

   16 STORAGE_CLASS: TYPEDEF
   17              | EXTERN
   18              | STATIC
   19              | AUTO

   20 TYPE: VOID
   21     | BOOL
   22     | CHAR
   23     | FLOAT
   24     | INT
   25     | DOUBLE
   26     | SHORT
   27     | LONG
   28     | SIGNED
   29     | UNSIGNED
   30     | ENUM_SPECIFIER

   31 QUALIFIER: CONST
   32          | VOLATILE

   33 INIT_DECLARATION_LIST: INIT_DECLARATION
   34                      | INIT_DECLARATION_LIST COMMA INIT_DECLARATION

   35 INIT_DECLARATION: DECLARATION_IDENTIFIER
   36                 | DECLARATION_IDENTIFIER ASSIGN INITIALIZER

   37 DECLARATION_IDENTIFIER: DIRECT_DECLARATOR
   38                       | POINTER DIRECT_DECLARATOR

   39 DIRECT_DECLARATOR: VARIABLE
   40                  | RBRACKET_L DECLARATION_IDENTIFIER RBRACKET_R
   41                  | DIRECT_DECLARATOR SBRACKET_L CONDITIONAL_EXPR SBRACKET_R
   42                  | DIRECT_DECLARATOR SBRACKET_L SBRACKET_R
   43                  | DIRECT_DECLARATOR DIRECT_DECLARATOR_PARAMETER

   44 DIRECT_DECLARATOR_PARAMETER: RBRACKET_L PARAMETER_TYPE_LIST RBRACKET_R
   45                            | RBRACKET_L IDENTIFIER_LIST RBRACKET_R
   46                            | RBRACKET_L RBRACKET_R

   47 POINTER: MULTIPLY
   48        | MULTIPLY QUALIFIER_LIST
   49        | MULTIPLY POINTER
   50        | MULTIPLY QUALIFIER_LIST POINTER

   51 QUALIFIER_LIST: QUALIFIER
   52               | QUALIFIER_LIST QUALIFIER

   53 INITIALIZER: ASSIGNMENT_EXPR
   54            | CBRACKET_L INITIALIZER_LIST CBRACKET_R

   55 INITIALIZER_LIST: INITIALIZER
   56                 | INITIALIZER_LIST COMMA INITIALIZER

   57 FUNCTION_DECLARATION: DECLARATION_SPECIFIERS DECLARATION_IDENTIFIER COMPOUND_STATEMENT
   58                     | DECLARATION_IDENTIFIER COMPOUND_STATEMENT

   59 FORWARD_DECLARATION: DECLARATION_SPECIFIERS DIRECT_DECLARATOR DIRECT_DECLARATOR_PARAMETER SEMICOLON

   60 PARAMETER_TYPE_LIST: PARAMETER_LIST
   61                    | PARAMETER_LIST COMMA ELLIPSIS

   62 PARAMETER_LIST: PARAMETER_DECLARATION
   63               | PARAMETER_LIST COMMA PARAMETER_DECLARATION

   64 PARAMETER_DECLARATION: DECLARATION_SPECIFIERS DECLARATION_IDENTIFIER
   65                      | DECLARATION_SPECIFIERS ABSTRACT_DECLARATOR
   66                      | DECLARATION_SPECIFIERS

   67 IDENTIFIER_LIST: VARIABLE
   68                | IDENTIFIER_LIST COMMA VARIABLE

   69 COMPOUND_STATEMENT: CBRACKET_L CBRACKET_R
   70                   | CBRACKET_L COMPOUND_LIST CBRACKET_R

   71 COMPOUND_LIST: COMPOUND_LIST_TYPE
   72              | COMPOUND_LIST COMPOUND_LIST_TYPE

   73 COMPOUND_LIST_TYPE: DECLARATION_LIST
   74                   | STATEMENT_LIST

   75 DECLARATION_LIST: VARIABLE_DECLARATION
   76                 | DECLARATION_LIST VARIABLE_DECLARATION

   77 STATEMENT_LIST: STATEMENT
   78               | STATEMENT_LIST STATEMENT

   79 STATEMENT: COMPOUND_STATEMENT
   80          | LABELLED_STATEMENT
   81          | EXPRESSION_STATEMENT
   82          | SELECTION_STATEMENT
   83          | ITERATION_STATEMENT
   84          | JUMP_STATEMENT

   85 LABELLED_STATEMENT: LABELLED_CONDITION COLON STATEMENT_LIST
   86                   | LABELLED_CONDITION COLON

   87 LABELLED_CONDITION: VARIABLE
   88                   | CASE CONSTANT_EXPRESSION
   89                   | DEFAULT

   90 EXPRESSION_STATEMENT: SEMICOLON
   91                     | EXPRESSION SEMICOLON

   92 SELECTION_STATEMENT: IF RBRACKET_L EXPRESSION RBRACKET_R STATEMENT
   93                    | IF RBRACKET_L EXPRESSION RBRACKET_R STATEMENT ELSE STATEMENT
   94                    | SWITCH RBRACKET_L EXPRESSION RBRACKET_R STATEMENT

   95 ITERATION_STATEMENT: WHILE RBRACKET_L EXPRESSION RBRACKET_R STATEMENT
   96                    | DO STATEMENT WHILE RBRACKET_L EXPRESSION RBRACKET_R SEMICOLON
   97                    | FOR RBRACKET_L INIT_STATEMENT ITERATION_CONDITION RBRACKET_R STATEMENT
   98                    | FOR RBRACKET_L INIT_STATEMENT ITERATION_CONDITION EXPRESSION RBRACKET_R STATEMENT

   99 INIT_STATEMENT: EXPRESSION_STATEMENT
  100               | VARIABLE_DECLARATION

  101 ITERATION_CONDITION: EXPRESSION_STATEMENT
  102                    | DECLARATION_SPECIFIERS DECLARATION_IDENTIFIER ASSIGN INITIALIZER SEMICOLON

  103 JUMP_STATEMENT: RETURN SEMICOLON
  104               | RETURN EXPRESSION SEMICOLON
  105               | CONTINUE SEMICOLON
  106               | BREAK SEMICOLON

  107 CONSTANT_EXPRESSION: CONDITIONAL_EXPR

  108 EXPRESSION: ASSIGNMENT_EXPR
  109           | EXPRESSION COMMA ASSIGNMENT_EXPR

  110 ASSIGNMENT_EXPR: CONDITIONAL_EXPR
  111                | UNARY_EXPR ASSIGN ASSIGNMENT_EXPR
  112                | UNARY_EXPR ADDASSIGN ASSIGNMENT_EXPR
  113                | UNARY_EXPR SUBASSIGN ASSIGNMENT_EXPR
  114                | UNARY_EXPR MULTASSIGN ASSIGNMENT_EXPR
  115                | UNARY_EXPR DIVASSIGN ASSIGNMENT_EXPR
  116                | UNARY_EXPR REMAINASSIGN ASSIGNMENT_EXPR
  117                | UNARY_EXPR LSHIFTASSIGN ASSIGNMENT_EXPR
  118                | UNARY_EXPR RSHIFTASSIGN ASSIGNMENT_EXPR
  119                | UNARY_EXPR BITANDASSIGN ASSIGNMENT_EXPR
  120                | UNARY_EXPR BITXORASSIGN ASSIGNMENT_EXPR
  121                | UNARY_EXPR BITORASSIGN ASSIGNMENT_EXPR

  122 CONDITIONAL_EXPR: LOGICAL_OR_EXPR
  123                 | LOGICAL_OR_EXPR CONDITIONAL EXPRESSION COLON CONDITIONAL_EXPR
  124                 | LOGICAL_OR_EXPR CONDITIONAL COLON CONDITIONAL_EXPR

  125 LOGICAL_OR_EXPR: LOGICAL_AND_EXPR
  126                | LOGICAL_OR_EXPR OR LOGICAL_AND_EXPR

  127 LOGICAL_AND_EXPR: INCLUSIVE_OR_EXPR
  128                 | LOGICAL_AND_EXPR AND INCLUSIVE_OR_EXPR

  129 INCLUSIVE_OR_EXPR: EXCLUSIVE_OR_EXPR
  130                  | INCLUSIVE_OR_EXPR BITOR EXCLUSIVE_OR_EXPR

  131 EXCLUSIVE_OR_EXPR: AND_EXPR
  132                  | EXCLUSIVE_OR_EXPR BITXOR AND_EXPR

  133 AND_EXPR: EQUALITY_EXPR
  134         | AND_EXPR BITAND EQUALITY_EXPR

  135 EQUALITY_EXPR: RELATIONAL_EXPR
  136              | EQUALITY_EXPR EQUAL RELATIONAL_EXPR
  137              | EQUALITY_EXPR NOTEQUAL RELATIONAL_EXPR

  138 RELATIONAL_EXPR: SHIFT_EXPR
  139                | RELATIONAL_EXPR GREATER SHIFT_EXPR
  140                | RELATIONAL_EXPR LESS SHIFT_EXPR
  141                | RELATIONAL_EXPR GREATEREQUAL SHIFT_EXPR
  142                | RELATIONAL_EXPR LESSEQUAL SHIFT_EXPR

  143 SHIFT_EXPR: ADDITIVE_EXPR
  144           | SHIFT_EXPR LSHIFT ADDITIVE_EXPR
  145           | SHIFT_EXPR RSHIFT ADDITIVE_EXPR

  146 ADDITIVE_EXPR: MULTIPLICATIVE_EXPR
  147              | ADDITIVE_EXPR PLUS MULTIPLICATIVE_EXPR
  148              | ADDITIVE_EXPR MINUS MULTIPLICATIVE_EXPR

  149 MULTIPLICATIVE_EXPR: CAST_EXPR
  150                    | MULTIPLICATIVE_EXPR MULTIPLY CAST_EXPR
  151                    | MULTIPLICATIVE_EXPR DIVIDE CAST_EXPR
  152                    | MULTIPLICATIVE_EXPR REMAINDER CAST_EXPR

  153 CAST_EXPR: UNARY_EXPR
  154          | RBRACKET_L TYPE_NAME RBRACKET_R CAST_EXPR

  155 UNARY_EXPR: POSTFIX_EXPR
  156           | INCREMENT UNARY_EXPR
  157           | DECREMENT UNARY_EXPR
  158           | BITAND CAST_EXPR
  159           | MULTIPLY CAST_EXPR
  160           | PLUS CAST_EXPR
  161           | MINUS CAST_EXPR
  162           | BITNOT CAST_EXPR
  163           | NOT CAST_EXPR
  164           | SIZEOF UNARY_EXPR
  165           | SIZEOF RBRACKET_L TYPE_NAME RBRACKET_R

  166 POSTFIX_EXPR: PRIMARY_EXPR
  167             | POSTFIX_EXPR SBRACKET_L EXPRESSION SBRACKET_R
  168             | POSTFIX_EXPR RBRACKET_L RBRACKET_R
  169             | POSTFIX_EXPR RBRACKET_L ARGUMENT_EXPR_LIST RBRACKET_R
  170             | POSTFIX_EXPR INCREMENT
  171             | POSTFIX_EXPR DECREMENT

  172 ARGUMENT_EXPR_LIST: ASSIGNMENT_EXPR
  173                   | ASSIGNMENT_EXPR COMMA ARGUMENT_EXPR_LIST

  174 PRIMARY_EXPR: VARIABLE
  175             | NUMBER
  176             | STRING_LITERAL
  177             | RBRACKET_L EXPRESSION RBRACKET_R

  178 TYPE_NAME: SPECIFIER_QUALIFIER_LIST
  179          | SPECIFIER_QUALIFIER_LIST ABSTRACT_DECLARATOR

  180 SPECIFIER_QUALIFIER_LIST: TYPE
  181                         | QUALIFIER
  182                         | TYPE SPECIFIER_QUALIFIER_LIST
  183                         | QUALIFIER SPECIFIER_QUALIFIER_LIST

  184 ABSTRACT_DECLARATOR: POINTER
  185                    | DIRECT_ABSTRACT_DECLARATOR
  186                    | POINTER DIRECT_ABSTRACT_DECLARATOR

  187 DIRECT_ABSTRACT_DECLARATOR: RBRACKET_L ABSTRACT_DECLARATOR RBRACKET_R
  188                           | ABSTRACT_DECLARATOR_PARAMETER
  189                           | DIRECT_ABSTRACT_DECLARATOR ABSTRACT_DECLARATOR_PARAMETER

  190 ABSTRACT_DECLARATOR_PARAMETER: SBRACKET_L SBRACKET_R
  191                              | SBRACKET_L CONSTANT_EXPRESSION SBRACKET_R
  192                              | RBRACKET_L RBRACKET_R
  193                              | RBRACKET_L PARAMETER_TYPE_LIST RBRACKET_R

  194 ENUM_SPECIFIER: ENUM CBRACKET_L ENUMERATOR_LIST CBRACKET_R
  195               | ENUM VARIABLE CBRACKET_L ENUMERATOR_LIST CBRACKET_R
  196               | ENUM VARIABLE

  197 ENUMERATOR_LIST: ENUMERATOR
  198                | ENUMERATOR COMMA ENUMERATOR_LIST

  199 ENUMERATOR: VARIABLE
  200           | VARIABLE ASSIGN CONSTANT_EXPRESSION


Terminals, with rules where they appear

$end (0) 0
error (256)
REDUCE_PREC (258)
CASE (259) 88
DEFAULT (260) 89
IF (261) 92 93
SWITCH (262) 94
WHILE (263) 95 96
DO (264) 96
FOR (265) 97 98
CONTINUE (266) 105
BREAK (267) 106
RETURN (268) 103 104
SEMICOLON (269) 8 9 59 90 91 96 102 103 104 105 106
COMMA (270) 34 56 61 63 68 109 173 198
TYPEDEF (271) 16
EXTERN (272) 17
STATIC (273) 18
AUTO (274) 19
VOID (275) 20
BOOL (276) 21
CHAR (277) 22
FLOAT (278) 23
INT (279) 24
DOUBLE (280) 25
SHORT (281) 26
LONG (282) 27
SIGNED (283) 28
UNSIGNED (284) 29
CONST (285) 31
VOLATILE (286) 32
SIZEOF (287) 164 165
ENUM (288) 194 195 196
ELLIPSIS (289) 61
VARIABLE (290) 39 67 68 87 174 195 196 199 200
NUMBER (291) 175
STRING_LITERAL (292) 176
RBRACKET_L (293) 40 44 45 46 92 93 94 95 96 97 98 154 165 168 169 177
    187 192 193
RBRACKET_R (294) 40 44 45 46 92 93 94 95 96 97 98 154 165 168 169 177
    187 192 193
CBRACKET_L (295) 54 69 70 194 195
CBRACKET_R (296) 54 69 70 194 195
SBRACKET_L (297) 41 42 167 190 191
SBRACKET_R (298) 41 42 167 190 191
ELSE (299) 93
BITANDASSIGN (300) 119
BITXORASSIGN (301) 120
BITORASSIGN (302) 121
LSHIFTASSIGN (303) 117
RSHIFTASSIGN (304) 118
MULTASSIGN (305) 114
DIVASSIGN (306) 115
REMAINASSIGN (307) 116
ADDASSIGN (308) 112
SUBASSIGN (309) 113
ASSIGN (310) 36 102 111 200
CONDITIONAL (311) 123 124
COLON (312) 85 86 123 124
OR (313) 126
AND (314) 128
BITOR (315) 130
BITXOR (316) 132
BITAND (317) 134 158
EQUAL (318) 136
NOTEQUAL (319) 137
GREATER (320) 139
LESS (321) 140
GREATEREQUAL (322) 141
LESSEQUAL (323) 142
LSHIFT (324) 144
RSHIFT (325) 145
PLUS (326) 147 160
MINUS (327) 148 161
MULTIPLY (328) 47 48 49 50 150 159
DIVIDE (329) 151
REMAINDER (330) 152
NOT (331) 163
BITNOT (332) 162
INCREMENT (333) 156 170
DECREMENT (334) 157 171


Nonterminals, with rules where they appear

$accept (80)
    on left: 0
ROOT (81)
    on left: 1, on right: 0
PROGRAM (82)
    on left: 2 3 4 5 6 7, on right: 1 5 6 7
VARIABLE_DECLARATION (83)
    on left: 8 9, on right: 2 5 75 76 100
DECLARATION_SPECIFIERS (84)
    on left: 10 11 12 13 14 15, on right: 8 9 13 14 15 57 59 64 65
    66 102
STORAGE_CLASS (85)
    on left: 16 17 18 19, on right: 12 15
TYPE (86)
    on left: 20 21 22 23 24 25 26 27 28 29 30, on right: 10 13 180
    182
QUALIFIER (87)
    on left: 31 32, on right: 11 14 51 52 181 183
INIT_DECLARATION_LIST (88)
    on left: 33 34, on right: 9 34
INIT_DECLARATION (89)
    on left: 35 36, on right: 33 34
DECLARATION_IDENTIFIER (90)
    on left: 37 38, on right: 35 36 40 57 58 64 102
DIRECT_DECLARATOR (91)
    on left: 39 40 41 42 43, on right: 37 38 41 42 43 59
DIRECT_DECLARATOR_PARAMETER (92)
    on left: 44 45 46, on right: 43 59
POINTER (93)
    on left: 47 48 49 50, on right: 38 49 50 184 186
QUALIFIER_LIST (94)
    on left: 51 52, on right: 48 50 52
INITIALIZER (95)
    on left: 53 54, on right: 36 55 56 102
INITIALIZER_LIST (96)
    on left: 55 56, on right: 54 56
FUNCTION_DECLARATION (97)
    on left: 57 58, on right: 3 6
FORWARD_DECLARATION (98)
    on left: 59, on right: 4 7
PARAMETER_TYPE_LIST (99)
    on left: 60 61, on right: 44 193
PARAMETER_LIST (100)
    on left: 62 63, on right: 60 61 63
PARAMETER_DECLARATION (101)
    on left: 64 65 66, on right: 62 63
IDENTIFIER_LIST (102)
    on left: 67 68, on right: 45 68
COMPOUND_STATEMENT (103)
    on left: 69 70, on right: 57 58 79
COMPOUND_LIST (104)
    on left: 71 72, on right: 70 72
COMPOUND_LIST_TYPE (105)
    on left: 73 74, on right: 71 72
DECLARATION_LIST (106)
    on left: 75 76, on right: 73 76
STATEMENT_LIST (107)
    on left: 77 78, on right: 74 78 85
STATEMENT (108)
    on left: 79 80 81 82 83 84, on right: 77 78 92 93 94 95 96 97 98
LABELLED_STATEMENT (109)
    on left: 85 86, on right: 80
LABELLED_CONDITION (110)
    on left: 87 88 89, on right: 85 86
EXPRESSION_STATEMENT (111)
    on left: 90 91, on right: 81 99 101
SELECTION_STATEMENT (112)
    on left: 92 93 94, on right: 82
ITERATION_STATEMENT (113)
    on left: 95 96 97 98, on right: 83
INIT_STATEMENT (114)
    on left: 99 100, on right: 97 98
ITERATION_CONDITION (115)
    on left: 101 102, on right: 97 98
JUMP_STATEMENT (116)
    on left: 103 104 105 106, on right: 84
CONSTANT_EXPRESSION (117)
    on left: 107, on right: 88 191 200
EXPRESSION (118)
    on left: 108 109, on right: 91 92 93 94 95 96 98 104 109 123 167
    177
ASSIGNMENT_EXPR (119)
    on left: 110 111 112 113 114 115 116 117 118 119 120 121, on right:
    53 108 109 111 112 113 114 115 116 117 118 119 120 121 172 173
CONDITIONAL_EXPR (120)
    on left: 122 123 124, on right: 41 107 110 123 124
LOGICAL_OR_EXPR (121)
    on left: 125 126, on right: 122 123 124 126
LOGICAL_AND_EXPR (122)
    on left: 127 128, on right: 125 126 128
INCLUSIVE_OR_EXPR (123)
    on left: 129 130, on right: 127 128 130
EXCLUSIVE_OR_EXPR (124)
    on left: 131 132, on right: 129 130 132
AND_EXPR (125)
    on left: 133 134, on right: 131 132 134
EQUALITY_EXPR (126)
    on left: 135 136 137, on right: 133 134 136 137
RELATIONAL_EXPR (127)
    on left: 138 139 140 141 142, on right: 135 136 137 139 140 141
    142
SHIFT_EXPR (128)
    on left: 143 144 145, on right: 138 139 140 141 142 144 145
ADDITIVE_EXPR (129)
    on left: 146 147 148, on right: 143 144 145 147 148
MULTIPLICATIVE_EXPR (130)
    on left: 149 150 151 152, on right: 146 147 148 150 151 152
CAST_EXPR (131)
    on left: 153 154, on right: 149 150 151 152 154 158 159 160 161
    162 163
UNARY_EXPR (132)
    on left: 155 156 157 158 159 160 161 162 163 164 165, on right:
    111 112 113 114 115 116 117 118 119 120 121 153 156 157 164
POSTFIX_EXPR (133)
    on left: 166 167 168 169 170 171, on right: 155 167 168 169 170
    171
ARGUMENT_EXPR_LIST (134)
    on left: 172 173, on right: 169 173
PRIMARY_EXPR (135)
    on left: 174 175 176 177, on right: 166
TYPE_NAME (136)
    on left: 178 179, on right: 154 165
SPECIFIER_QUALIFIER_LIST (137)
    on left: 180 181 182 183, on right: 178 179 182 183
ABSTRACT_DECLARATOR (138)
    on left: 184 185 186, on right: 65 179 187
DIRECT_ABSTRACT_DECLARATOR (139)
    on left: 187 188 189, on right: 185 186 189
ABSTRACT_DECLARATOR_PARAMETER (140)
    on left: 190 191 192 193, on right: 188 189
ENUM_SPECIFIER (141)
    on left: 194 195 196, on right: 30
ENUMERATOR_LIST (142)
    on left: 197 198, on right: 194 195 198
ENUMERATOR (143)
    on left: 199 200, on right: 197 198


State 0

    0 $accept: . ROOT $end
    1 ROOT: . PROGRAM
    2 PROGRAM: . VARIABLE_DECLARATION
    3        | . FUNCTION_DECLARATION
    4        | . FORWARD_DECLARATION
    5        | . PROGRAM VARIABLE_DECLARATION
    6        | . PROGRAM FUNCTION_DECLARATION
    7        | . PROGRAM FORWARD_DECLARATION
    8 VARIABLE_DECLARATION: . DECLARATION_SPECIFIERS SEMICOLON
    9                     | . DECLARATION_SPECIFIERS INIT_DECLARATION_LIST SEMICOLON
   10 DECLARATION_SPECIFIERS: . TYPE
   11                       | . QUALIFIER
   12                       | . STORAGE_CLASS
   13                       | . TYPE DECLARATION_SPECIFIERS
   14                       | . QUALIFIER DECLARATION_SPECIFIERS
   15                       | . STORAGE_CLASS DECLARATION_SPECIFIERS
   16 STORAGE_CLASS: . TYPEDEF
   17              | . EXTERN
   18              | . STATIC
   19              | . AUTO
   20 TYPE: . VOID
   21     | . BOOL
   22     | . CHAR
   23     | . FLOAT
   24     | . INT
   25     | . DOUBLE
   26     | . SHORT
   27     | . LONG
   28     | . SIGNED
   29     | . UNSIGNED
   30     | . ENUM_SPECIFIER
   31 QUALIFIER: . CONST
   32          | . VOLATILE
   37 DECLARATION_IDENTIFIER: . DIRECT_DECLARATOR
   38                       | . POINTER DIRECT_DECLARATOR
   39 DIRECT_DECLARATOR: . VARIABLE
   40                  | . RBRACKET_L DECLARATION_IDENTIFIER RBRACKET_R
   41                  | . DIRECT_DECLARATOR SBRACKET_L CONDITIONAL_EXPR SBRACKET_R
   42                  | . DIRECT_DECLARATOR SBRACKET_L SBRACKET_R
   43                  | . DIRECT_DECLARATOR DIRECT_DECLARATOR_PARAMETER
   47 POINTER: . MULTIPLY
   48        | . MULTIPLY QUALIFIER_LIST
   49        | . MULTIPLY POINTER
   50        | . MULTIPLY QUALIFIER_LIST POINTER
   57 FUNCTION_DECLARATION: . DECLARATION_SPECIFIERS DECLARATION_IDENTIFIER COMPOUND_STATEMENT
   58                     | . DECLARATION_IDENTIFIER COMPOUND_STATEMENT
   59 FORWARD_DECLARATION: . DECLARATION_SPECIFIERS DIRECT_DECLARATOR DIRECT_DECLARATOR_PARAMETER SEMICOLON
  194 ENUM_SPECIFIER: . ENUM CBRACKET_L ENUMERATOR_LIST CBRACKET_R
  195               | . ENUM VARIABLE CBRACKET_L ENUMERATOR_LIST CBRACKET_R
  196               | . ENUM VARIABLE

    TYPEDEF     shift, and go to state 1
    EXTERN      shift, and go to state 2
    STATIC      shift, and go to state 3
    AUTO        shift, and go to state 4
    VOID        shift, and go to state 5
    BOOL        shift, and go to state 6
    CHAR        shift, and go to state 7
    FLOAT       shift, and go to state 8
    INT         shift, and go to state 9
    DOUBLE      shift, and go to state 10
    SHORT       shift, and go to state 11
    LONG        shift, and go to state 12
    SIGNED      shift, and go to state 13
    UNSIGNED    shift, and go to state 14
    CONST       shift, and go to state 15
    VOLATILE    shift, and go to state 16
    ENUM        shift, and go to state 17
    VARIABLE    shift, and go to state 18
    RBRACKET_L  shift, and go to state 19
    MULTIPLY    shift, and go to state 20

    ROOT                    go to state 21
    PROGRAM                 go to state 22
    VARIABLE_DECLARATION    go to state 23
    DECLARATION_SPECIFIERS  go to state 24
    STORAGE_CLASS           go to state 25
    TYPE                    go to state 26
    QUALIFIER               go to state 27
    DECLARATION_IDENTIFIER  go to state 28
    DIRECT_DECLARATOR       go to state 29
    POINTER                 go to state 30
    FUNCTION_DECLARATION    go to state 31
    FORWARD_DECLARATION     go to state 32
    ENUM_SPECIFIER          go to state 33


State 1

   16 STORAGE_CLASS: TYPEDEF .

    $default  reduce using rule 16 (STORAGE_CLASS)


State 2

   17 STORAGE_CLASS: EXTERN .

    $default  reduce using rule 17 (STORAGE_CLASS)


State 3

   18 STORAGE_CLASS: STATIC .

    $default  reduce using rule 18 (STORAGE_CLASS)


State 4

   19 STORAGE_CLASS: AUTO .

    $default  reduce using rule 19 (STORAGE_CLASS)


State 5

   20 TYPE: VOID .

    $default  reduce using rule 20 (TYPE)


State 6

   21 TYPE: BOOL .

    $default  reduce using rule 21 (TYPE)


State 7

   22 TYPE: CHAR .

    $default  reduce using rule 22 (TYPE)


State 8

   23 TYPE: FLOAT .

    $default  reduce using rule 23 (TYPE)


State 9

   24 TYPE: INT .

    $default  reduce using rule 24 (TYPE)


State 10

   25 TYPE: DOUBLE .

    $default  reduce using rule 25 (TYPE)


State 11

   26 TYPE: SHORT .

    $default  reduce using rule 26 (TYPE)


State 12

   27 TYPE: LONG .

    $default  reduce using rule 27 (TYPE)


State 13

   28 TYPE: SIGNED .

    $default  reduce using rule 28 (TYPE)


State 14

   29 TYPE: UNSIGNED .

    $default  reduce using rule 29 (TYPE)


State 15

   31 QUALIFIER: CONST .

    $default  reduce using rule 31 (QUALIFIER)


State 16

   32 QUALIFIER: VOLATILE .

    $default  reduce using rule 32 (QUALIFIER)


State 17

  194 ENUM_SPECIFIER: ENUM . CBRACKET_L ENUMERATOR_LIST CBRACKET_R
  195               | ENUM . VARIABLE CBRACKET_L ENUMERATOR_LIST CBRACKET_R
  196               | ENUM . VARIABLE

    VARIABLE    shift, and go to state 34
    CBRACKET_L  shift, and go to state 35


State 18

   39 DIRECT_DECLARATOR: VARIABLE .

    $default  reduce using rule 39 (DIRECT_DECLARATOR)


State 19

   37 DECLARATION_IDENTIFIER: . DIRECT_DECLARATOR
   38                       | . POINTER DIRECT_DECLARATOR
   39 DIRECT_DECLARATOR: . VARIABLE
   40                  | . RBRACKET_L DECLARATION_IDENTIFIER RBRACKET_R
   40                  | RBRACKET_L . DECLARATION_IDENTIFIER RBRACKET_R
   41                  | . DIRECT_DECLARATOR SBRACKET_L CONDITIONAL_EXPR SBRACKET_R
   42                  | . DIRECT_DECLARATOR SBRACKET_L SBRACKET_R
   43                  | . DIRECT_DECLARATOR DIRECT_DECLARATOR_PARAMETER
   47 POINTER: . MULTIPLY
   48        | . MULTIPLY QUALIFIER_LIST
   49        | . MULTIPLY POINTER
   50        | . MULTIPLY QUALIFIER_LIST POINTER

    VARIABLE    shift, and go to state 18
    RBRACKET_L  shift, and go to state 19
    MULTIPLY    shift, and go to state 20

    DECLARATION_IDENTIFIER  go to state 36
    DIRECT_DECLARATOR       go to state 29
    POINTER                 go to state 30


State 20

   31 QUALIFIER: . CONST
   32          | . VOLATILE
   47 POINTER: . MULTIPLY
   47        | MULTIPLY .  [COMMA, VARIABLE, RBRACKET_L, RBRACKET_R, SBRACKET_L]
   48        | . MULTIPLY QUALIFIER_LIST
   48        | MULTIPLY . QUALIFIER_LIST
   49        | . MULTIPLY POINTER
   49        | MULTIPLY . POINTER
   50        | . MULTIPLY QUALIFIER_LIST POINTER
   50        | MULTIPLY . QUALIFIER_LIST POINTER
   51 QUALIFIER_LIST: . QUALIFIER
   52               | . QUALIFIER_LIST QUALIFIER

    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    MULTIPLY  shift, and go to state 20

    $default  reduce using rule 47 (POINTER)

    QUALIFIER       go to state 37
    POINTER         go to state 38
    QUALIFIER_LIST  go to state 39


State 21

    0 $accept: ROOT . $end

    $end  shift, and go to state 40


State 22

    1 ROOT: PROGRAM .  [$end]
    5 PROGRAM: PROGRAM . VARIABLE_DECLARATION
    6        | PROGRAM . FUNCTION_DECLARATION
    7        | PROGRAM . FORWARD_DECLARATION
    8 VARIABLE_DECLARATION: . DECLARATION_SPECIFIERS SEMICOLON
    9                     | . DECLARATION_SPECIFIERS INIT_DECLARATION_LIST SEMICOLON
   10 DECLARATION_SPECIFIERS: . TYPE
   11                       | . QUALIFIER
   12                       | . STORAGE_CLASS
   13                       | . TYPE DECLARATION_SPECIFIERS
   14                       | . QUALIFIER DECLARATION_SPECIFIERS
   15                       | . STORAGE_CLASS DECLARATION_SPECIFIERS
   16 STORAGE_CLASS: . TYPEDEF
   17              | . EXTERN
   18              | . STATIC
   19              | . AUTO
   20 TYPE: . VOID
   21     | . BOOL
   22     | . CHAR
   23     | . FLOAT
   24     | . INT
   25     | . DOUBLE
   26     | . SHORT
   27     | . LONG
   28     | . SIGNED
   29     | . UNSIGNED
   30     | . ENUM_SPECIFIER
   31 QUALIFIER: . CONST
   32          | . VOLATILE
   37 DECLARATION_IDENTIFIER: . DIRECT_DECLARATOR
   38                       | . POINTER DIRECT_DECLARATOR
   39 DIRECT_DECLARATOR: . VARIABLE
   40                  | . RBRACKET_L DECLARATION_IDENTIFIER RBRACKET_R
   41                  | . DIRECT_DECLARATOR SBRACKET_L CONDITIONAL_EXPR SBRACKET_R
   42                  | . DIRECT_DECLARATOR SBRACKET_L SBRACKET_R
   43                  | . DIRECT_DECLARATOR DIRECT_DECLARATOR_PARAMETER
   47 POINTER: . MULTIPLY
   48        | . MULTIPLY QUALIFIER_LIST
   49        | . MULTIPLY POINTER
   50        | . MULTIPLY QUALIFIER_LIST POINTER
   57 FUNCTION_DECLARATION: . DECLARATION_SPECIFIERS DECLARATION_IDENTIFIER COMPOUND_STATEMENT
   58                     | . DECLARATION_IDENTIFIER COMPOUND_STATEMENT
   59 FORWARD_DECLARATION: . DECLARATION_SPECIFIERS DIRECT_DECLARATOR DIRECT_DECLARATOR_PARAMETER SEMICOLON
  194 ENUM_SPECIFIER: . ENUM CBRACKET_L ENUMERATOR_LIST CBRACKET_R
  195               | . ENUM VARIABLE CBRACKET_L ENUMERATOR_LIST CBRACKET_R
  196               | . ENUM VARIABLE

    TYPEDEF     shift, and go to state 1
    EXTERN      shift, and go to state 2
    STATIC      shift, and go to state 3
    AUTO        shift, and go to state 4
    VOID        shift, and go to state 5
    BOOL        shift, and go to state 6
    CHAR        shift, and go to state 7
    FLOAT       shift, and go to state 8
    INT         shift, and go to state 9
    DOUBLE      shift, and go to state 10
    SHORT       shift, and go to state 11
    LONG        shift, and go to state 12
    SIGNED      shift, and go to state 13
    UNSIGNED    shift, and go to state 14
    CONST       shift, and go to state 15
    VOLATILE    shift, and go to state 16
    ENUM        shift, and go to state 17
    VARIABLE    shift, and go to state 18
    RBRACKET_L  shift, and go to state 19
    MULTIPLY    shift, and go to state 20

    $default  reduce using rule 1 (ROOT)

    VARIABLE_DECLARATION    go to state 41
    DECLARATION_SPECIFIERS  go to state 24
    STORAGE_CLASS           go to state 25
    TYPE                    go to state 26
    QUALIFIER               go to state 27
    DECLARATION_IDENTIFIER  go to state 28
    DIRECT_DECLARATOR       go to state 29
    POINTER                 go to state 30
    FUNCTION_DECLARATION    go to state 42
    FORWARD_DECLARATION     go to state 43
    ENUM_SPECIFIER          go to state 33


State 23

    2 PROGRAM: VARIABLE_DECLARATION .
